@@ -1,5 +1,5 @@
 %
-% $Id: titlepag.tex,v 1.45.2.4 2017/07/03 16:45:53 sfeam Exp $
+% $Id: titlepag.tex,v 1.45.2.5 2017/07/30 16:58:27 sfeam Exp $
 %
 
 \ifx\LaTeXe\undefined
@@ -176,7 +176,7 @@
   \vspace{2ex}
 
 %  31 May 2017 Version 5.2
-   Version 5.2 rc3 (July 2017)
+   Version 5.2 rc4 (July 2017)
 
    \end{center}
 \newpage
